Wed Mar 24 20:49:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/uri.rb: Documented (thanks Dmitry V. Sabanin).
	* lib/uri/common.rb: Ditto.
	* lib/uri/ftp.rb: Ditto.
	* lib/uri/generic.rb: Ditto.
	* lib/uri/http.rb: Ditto.
	* lib/uri/https.rb: Ditto.
	* lib/uri/ldap.rb: Ditto.
	* lib/uri/mailto.rb: Ditto.

Wed Mar 24 18:48:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb ($ruby, $topdir, $hdrdir): should not be affected by
	  DESTDIR after installed.

	* lib/mkmf.rb (dummy_makefile): default file lists to be cleaned.

Wed Mar 24 12:32:56 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::handle_class_module):
	  Don't document methods if we don't know for sure the
	  class or module.

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_class):
	  Don't store documentation for singleton classes if we
	  don't know the real class.

Wed Mar 24 11:11:26 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb (Generators::HTMLGenerator::load_html_template):
	  Allow non-RDoc templates by putting a slash in the template name

Wed Mar 24 10:05:22 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/tempfile.rb (Tempfile::_close): should not clear @tmpname
	  until the file is really removed. [ruby-core:02684]

Wed Mar 24 04:12:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_mod_cvar_get): new method Module#class_variable_get.

	* object.c (rb_mod_cvar_set): ditto (Module#class_variable_set).

Tue Mar 23 17:45:22 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_atfork): 1.9 warns no more for thread
	  termination.  [ruby-dev:23212]

Tue Mar 23 14:46:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, */Makefile.sub, common.mk (clean-local, distclean-local):
	  separate files under directories due to directory separator.

	* */Makefile.sub (MKFILES): common.mk and */Makefile.sub should not be
	  removed.
